test/lit/pto/tscatter_maskpattern_both_invalid.pto
// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

module attributes {pto.target_arch = "a2a3"} {
  func.func @tscatter_both_modes() {
    %src = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=1, cols=64, v_row=1, v_col=64, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=1, cols=32, v_row=1, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %idx = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=i16, rows=1, cols=32, v_row=1, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    "pto.tscatter"(%src, %dst, %idx) <{maskPattern = #pto.mask_pattern<P0101>}> : (!pto.tile_buf<loc=vec, dtype=f16, rows=1, cols=64, v_row=1, v_col=64, blayout=row_major, slayout=none_box, fractal=512, pad=0>, !pto.tile_buf<loc=vec, dtype=f16, rows=1, cols=32, v_row=1, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>, !pto.tile_buf<loc=vec, dtype=i16, rows=1, cols=32, v_row=1, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>) -> ()
    func.return
  }
}

// CHECK: error: 'pto.tscatter' op expects exactly one of indexes operand or maskPattern attribute
